add related posts, style code snippets

--- a/site/content/posts/2017-02-01-2017Functions-pt1.md
+++ b/site/content/posts/2017-02-01-2017Functions-pt1.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-02-01T00:00:00Z"
-tags = "javascript, functions, series, under the hood"
+tags = ["javascript", "functions", "series", "under the hood"]
 title = "Functions pt.1"
 url = "/2017/02/01/2017Functions-pt1/"
 draft = false
