--- a/site/content/posts/2017-03-14-2017Functions-pt3.md
+++ b/site/content/posts/2017-03-14-2017Functions-pt3.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-03-14T00:00:00Z"
-tags = "javascript, functions, series, under the hood"
+tags = ["javascript", "functions", "series", "under the hood"]
 title = "Functions pt.3"
 url = "/2017/03/14/2017Functions-pt3/"
 draft = false
