--- a/site/content/posts/2017-03-31-2017Building-a-bot.md
+++ b/site/content/posts/2017-03-31-2017Building-a-bot.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-03-31T00:00:00Z"
-tags = "javascript, APIs, data, bots"
+tags = ["javascript", "APIs", "data", "bots"]
 title = "Building @weizenbaumbot"
 url = "/2017/03/31/2017Building-a-bot/"
 draft = false
