--- a/site/content/posts/2017-04-12-2017Routes.md
+++ b/site/content/posts/2017-04-12-2017Routes.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-04-12T00:00:00Z"
-tags = "javascript, MongoDB, Express, backend"
+tags = ["javascript", "MongoDB", "Express", "backend"]
 title = "Routing w/Express & MongoDB"
 url = "/2017/04/12/2017Routes/"
 draft = false
