--- a/site/content/posts/2017-05-03-2017EventLoop.md
+++ b/site/content/posts/2017-05-03-2017EventLoop.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-05-03T00:00:00Z"
-tags = "javascript, learning, under the hood"
+tags = ["javascript", "learning", "under the hood"]
 title = "The Event Loop"
 url = "/2017/05/03/2017EventLoop/"
 draft = false
