revert to 7a26b18eb999b64bf345d5fb09b9e5b0a165e97b

--- a/site/content/posts/2017-02-13-2017Functions-pt2.md
+++ b/site/content/posts/2017-02-13-2017Functions-pt2.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-02-13T00:00:00Z"
-tags = ["javascript", "functions", "series", "under the hood"]
+tags = "javascript, functions, series, under the hood"
 title = "Functions pt.2"
 url = "/2017/02/13/2017Functions-pt2/"
 draft = false
