--- a/site/content/posts/2017-03-17-2017CSSVariables.md
+++ b/site/content/posts/2017-03-17-2017CSSVariables.md
@@ -1,6 +1,6 @@
 +++
 date = "2017-03-17T00:00:00Z"
-tags = ["css", "animation", "color", "css", "variables"]
+tags = "css, animation, color, css variables"
 title = "CSS Variables"
 url = "/2017/03/17/2017CSSVariables/"
 type = "post"
