--- a/site/content/posts/2017-02-01-2017Functions-pt1.md
+++ b/site/content/posts/2017-02-01-2017Functions-pt1.md
@@ -21,14 +21,14 @@ I'm sure you've heard this before: in Javascript, _everything_ is an object. I h
 
 ## Statements vs Expressions
 __Function Statements:__
-```
+```javascript
 function unicorns() {
 	console.log('fart pixels')
 	}
 ```
 
 __Function Expressions:__
-```
+```javascript
 var unicorns = function() {
 	console.log('fart pixels')
 }
@@ -46,7 +46,7 @@ Let's review: when you run your code, the computer will first commit everything 
 
 It's also interesting to note that technically, function expressions are anonymous functions, or better yet they're function objects contained within variables. You invoke a function expression by calling the variable name you assigned to it and adding parentheses, or leave it parentheses free and pass it to another function as parameter.
 
-```
+```javascript
 var show = function(info) {
 	console.log(info)
 }
