--- a/site/content/posts/2017-02-13-2017Functions-pt2.md
+++ b/site/content/posts/2017-02-13-2017Functions-pt2.md
@@ -16,7 +16,7 @@ Great, but what about `this`?  When you invoke a function and it's execution con
 
 For example, if you call a __function statement__ or __expression__ as is, their manifestation of `this` will always point to the global object
 
-```
+```javascript
 function unicornsFart() {
 	console.log(this)
 	this.whatdotheyfart = 'pixels'  
@@ -24,7 +24,7 @@ function unicornsFart() {
 unicornsFart()
 ```
 
-```
+```javascript
 var unicornsFart = function() {
   console.log(this)
   this.whatdotheyfart = 'pixels'
@@ -34,7 +34,7 @@ unicornsFart()
 
 In our example then, `pixels` attaches `whatdotheyfart` to the global execution context and not to the function that calls it. Which might feel a bit weird to some - I get it. It did at one point seem so natural for me to assume that `this`'s purpose was to attach methods and variables to the functions that created and used them. But when you understand the true nature of functions within the context of Javascript, the surprising bits about the language start making perfect sense. Well, sort of...
 
-```
+```javascript
 var unicornsStillFart = {
    name: 'the unicorn object',
    log:  function() {
@@ -48,7 +48,7 @@ Remember everything I said about `this` up there? When it comes to __objects__, 
 
 Or does it? What if `this` is invoked from two layers deep inside the object?
 
-```
+```javascript
 var unicornsStillFart = {
 	name: 'the unicorn object',
 	log:  function() {
@@ -72,7 +72,7 @@ But not to worry because (duh,) there's always a hack - should you find yourself
 
 Since your object method contains a new variable that points to `this`, they'll be referencing the same location in your computer's memory, which in this case is the `unicornsStillFart` object. Swap out `this` for self in the rest of your code and you're in the clear.
 
-```
+```javascript
 var unicornsStillFart = {
 	name: 'the unicorn object',
 	log:  function() {
@@ -97,7 +97,7 @@ Ok so arrow functions! Let's jump from some vanilla js basics into ES6 specifics
 
 Before we get into that, let's break down how an arrow function works because it can be written a few different ways
 
-```
+```javascript
 // FUNCTION EXPRESSION
 const listUnicorns = unicorns.map(function(unicorn) {
   return `${unicorn}`
@@ -127,7 +127,7 @@ __A note on implicit returns__
 
 Most of the time I argue in favor of explicit everything because implicit things leave a lot of room for interpretation from the programer. But in this case I have to conceed - it feels anything but confusing, and creates what feels like a much more fluid exchange with your computer.
 
-```
+```javascript
 const numbers = [23, 546, 69, 28]
 	const high = numbers.filter(age => number >= 60);
 	// if the number is above 60, returns true & adds to new filtered array.
@@ -139,7 +139,7 @@ __scope and this__
 
 When you use an arrow function, `this` is inherited from whatever the parent scope is - which can be handy for things like click handlers. Speaking of `this`, the `self` pattern mentioned above can now be avoided completely: just make the inner function an arrow function, et voila! Problem solved, and your code looks cleaner. This is possible because the arrow function doesn't change the value of 'this'. It just inherits from the parent.
 
-```
+```javascript
 var c = {
 	name: 'the c object',
 	log:  function() {
