--- a/site/content/posts/2017-03-31-2017Building-a-bot.md
+++ b/site/content/posts/2017-03-31-2017Building-a-bot.md
@@ -16,7 +16,7 @@ Funnily enough I was introduced to ELIZA in my teens when a computer engineer fr
 While I still use Python a lot,  since I usually reserve Javascript for playing around with layout and dynamic visuals, I wanted to try and build this bot with JS. Of course, I have to give credit where it's due:
 [Dan Shiffman](https://twitter.com/shiffman) does a great job of introducing node's Twitter API Client, [__Twit__](https://www.npmjs.com/package/twit), which adds a hugely appreciated layer of obviousness to the whole endeavour:
 
-```
+```javascript
 var Twit = require('twit')
 var config = require('./config')
 var T = new Twit(config)
@@ -30,7 +30,7 @@ function followed(eventMsg) {
 
 ELIZA was pretty simple to set up. NPM offers a number of different takes on Weizenbaum's chatbot, but I found [__Elizanode__](https://www.npmjs.com/package/elizanode) to be the most straightforward to apply.
 
-```
+```javascript
 var ElizaNode = require('elizanode')
 var eliza = new ElizaNode();
 var initial = eliza.getInitial()
@@ -43,7 +43,7 @@ Simple enough... but wait! How do you achieve threaded responses? It's a pretty 
 
 As you might have guessed it comes down to twitter message id's. But if you look at the JSON Twitter gives you, things are not necessarily so obvious. Case in point:
 
-```
+```javascript
 {
   "created_at": "Fri Mar 31 10:55:49 +0000 2017",
   "id": 847764363163422700,
@@ -136,7 +136,7 @@ But still, at this point my bot was replying on loop, every second. Which is def
 
 By using `in_reply_to_user_id_str` I'd created a reply loop that had the bot continuously tweeting at and therefore soliciting itself. In fact, it's the `id_str` way up at the top of the JSON file that I needed:
 
-```
+```javascript
 function tweetEvent(eventMsg) {
   //twitter data
   var screenName = eventMsg.source.screen_name
