--- a/site/content/posts/2017-04-12-2017Routes.md
+++ b/site/content/posts/2017-04-12-2017Routes.md
@@ -16,7 +16,7 @@ Nothing too fancy to start off with, and I won't go over all the HTTP methods th
 In the routes, `(req, res, next)` is just short form for `(request, response, next)` - so as you can see in our route below we are calling the `.findOne` method on `User`, which is one of two collections in our database (the other being `Posts` where we can find all our individual Morning Pages) and connecting all the pages written by the logged in user to... well, to themselves (one user has many pages, many pages are written by a single user) so that we can see them listed on our webpage. But this all might sound like spaghetti on a plate, so lets look to our code for more clarity 🍝
 
 
-```
+```javascript
 //ROUTE
 postRoutes.get("/pages", (req, res, next) => {
 	User.findOne({_id: req.user._id}).populate("posts").exec((err, user) => {
@@ -37,7 +37,7 @@ N.B: You are __not__ putting the posts inside the user in the database, you are 
 
 Kay, now you can look at the model for our users!
 
-```
+```javascript
 //MODEL User.js
 const userSchema = new Schema({
   username: String,
@@ -55,7 +55,7 @@ In the above code, we see how Express and MongoDB communicate: via models made a
 
 Notice that in `userSchema` you have some key/value pairings, one of which features a link to... _another schema?_ As you can see there's a `ref:'Post'` in there that points to the Post model. That link and reference is what allows us to populate our user's posts array with post ObjectIds, up above in our route.
 
-```
+```javascript
 //VIEW
 <% if (user) { %>
   <section>
@@ -90,7 +90,7 @@ Here though, we see a fairly simple example of how you can grab things from the 
 
 But wait! There's more. We have links, but we don't have what they link to yet. How would we render a single post onto a new webpage?
 
-```
+```javascript
 //ROUTE
 postRoutes.get('/page/:_id', (req, res, next) => {
   let user = req.user._id
@@ -108,7 +108,7 @@ Something new is happening in our routes, can you spot it? In this get request, 
 
 I tend to like to keep everything that refers to the same thing named the same across all concerns, but not everyone does this. I personally find that gives me an added layer of clarity, which is always nice. It also makes your code more readable which is pretty important if you consider that 80%+ of our time as devs is spent maintaining other people's code. And so I name it `_id`, because that's what we've been calling it everwhere else.
 
-```
+```javascript
 //MODEL Post.js
 const postSchema = new Schema({
   author: {type: Schema.ObjectId, ref:'User'},
@@ -123,7 +123,7 @@ module.exports = Post
 
 The rest is pretty straightforward if you've read through everything. Our Post model features a link and reference to the User schema that looks pretty similar the one we saw in our User model. And then here below we see very simply, how to render out the text of the individual Morning Page we clicked on.
 
-```
+```javascript
 //VIEW
 <% if (user) { %>
 	<section>
