--- a/site/content/posts/2017-03-14-2017Functions-pt3.md
+++ b/site/content/posts/2017-03-14-2017Functions-pt3.md
@@ -31,13 +31,13 @@ In essence it's a pointer - or better yet a getter function - that returns the l
 ## Constructor Functions
 But let's hit pause on all this `__proto__`/prototype stuff for a second and look at what constructor functions are. If you've ever created an array, you've used a constructor function - aka a function object that defines the properties and methods of the object you create via the keyword `new`.
 
-```
+```javascript
 const unicorns = new Array('first', 'second', 'third');
 ```
 
 The only difference between the array's constructor and your own is that the former is baked into the javascript language, ready and  waiting for you to use anytime you might need it, complete with built-in methods right out of the box. While the later is really up to you to define.
 
-```
+```javascript
 function  Unicorn(name, age) {
   this.name = name;
   this.age =  age;
@@ -61,7 +61,7 @@ And thanks to the way Javascript is built,  we have also simultaneously just set
 
 Go ahead and call `__proto__` on `pixelfarter` and you'll get a glimpse of both what is happening behind the scenes, and why `__proto__` is so important.
 
-```
+```javascript
 pixelfarter.__proto__
 // Unicorn {}
 ```
@@ -78,7 +78,7 @@ Whew! Ok, I think we've circled how everything is linked together for long enoug
 
 With all browsers officially supporting Object.create, this feels as good a time as any to review what in fact, this is and what it's good for. For one, it's the most literal way to apply prototypal inheritance in Javascript. When you call it, it provides you with an empty object, much like a constructor, who's prototype doesn't point to, but in fact _is_,  that which you passed into the `create()` property.
 
-```
+```javascript
 var unicorn = {
  firstname: 'Default',
  lastname: 'Default',
@@ -92,7 +92,7 @@ const pixelfarter = Object.create(unicorn)
 
 So the object that is createed by Object.create actually forms the prototype of the new object itself.
 
-```
+```javascript
 const pixelfarter = new Unicorn() === Object.create(Unicorn.prototype)
 ```
 
