add related posts partial

--- a/site/content/posts/2017-01-06-2017Goals.md
+++ b/site/content/posts/2017-01-06-2017Goals.md
@@ -4,7 +4,7 @@ tags = "goals"
 title = "2017 - Looking Forward"
 url = "/2017/01/06/2017Goals/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 As last year was my first real experience as a dev, my main goal was simply to keep my head above water. Having survived (!!) I figure for year two I ought to set some slightly clearer goals for myself. Yea, I know... _UGH_ bcs who wants to preepmtively disappoint themselves. But they say it can be helpful, (they who? ¯\_(ツ)_/¯) so I figure I might as well give it a go & see what happens. I now have a better idea too, of the types of things I'm truly interested in in web development, where I want to go, & what I hope to accomplish in this new creative space of mine.
