--- a/site/content/posts/2017-02-01-2017Functions-pt1.md
+++ b/site/content/posts/2017-02-01-2017Functions-pt1.md
@@ -4,7 +4,7 @@ tags = ["javascript", "functions", "series", "under the hood"]
 title = "Functions pt.1"
 url = "/2017/02/01/2017Functions-pt1/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 Let's break down functions, shall we? Because while they may seem straight forward, there are a lot of little details about how you write them, and when and where you create and call them that can really make, or severely break your program.
