--- a/site/content/posts/2017-03-14-2017Functions-pt3.md
+++ b/site/content/posts/2017-03-14-2017Functions-pt3.md
@@ -4,7 +4,7 @@ tags = ["javascript", "functions", "series", "under the hood"]
 title = "Functions pt.3"
 url = "/2017/03/14/2017Functions-pt3/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 Initially I only set out to do a single post touching on a few of the intricacies about functions that I found helpful. But here I am three posts later with more info still! There's just a lot going on with functions-or-do-you-mean-objects in JS  - a solid understanding of which I think will bust the door wide open on why the code you write causes your programs to behave in the mysterious ways they sometimes do.
