--- a/site/content/posts/2017-03-31-2017Building-a-bot.md
+++ b/site/content/posts/2017-03-31-2017Building-a-bot.md
@@ -4,7 +4,7 @@ tags = ["javascript", "APIs", "data", "bots"]
 title = "Building @weizenbaumbot"
 url = "/2017/03/31/2017Building-a-bot/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 My first encounter with Twitter bots happened last year via Python and involved my building a bot that would receive tweets with a specific hashtag and photo attached, apply an instagram-like filter to it, and retweet the user with the new photo. It was a fun first pass at getting my hands dirty with [__Twitter's streaming API__](https://dev.twitter.com/streaming/overview) (which of all it's API's might actually be the least obvious one to use... I thought I was struggling because #n00b, etc. but a number of more experienced coders have since reassured me that it's not just me. Wee!)
