--- a/site/content/posts/2017-04-12-2017Routes.md
+++ b/site/content/posts/2017-04-12-2017Routes.md
@@ -4,7 +4,7 @@ tags = ["javascript", "MongoDB", "Express", "backend"]
 title = "Routing w/Express & MongoDB"
 url = "/2017/04/12/2017Routes/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 _... Or that time I learned that I don't hate databases & models... I hate naming conventions!_
