--- a/site/content/posts/2017-05-03-2017EventLoop.md
+++ b/site/content/posts/2017-05-03-2017EventLoop.md
@@ -4,7 +4,7 @@ tags = ["javascript", "learning", "under the hood"]
 title = "The Event Loop"
 url = "/2017/05/03/2017EventLoop/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 ## First things first: some context
