--- a/site/content/posts/2017-02-13-2017Functions-pt2.md
+++ b/site/content/posts/2017-02-13-2017Functions-pt2.md
@@ -4,7 +4,7 @@ tags = ["javascript", "functions", "series", "under the hood"]
 title = "Functions pt.2"
 url = "/2017/02/13/2017Functions-pt2/"
 draft = false
-type = "post"
+type = "posts"
 +++
 
 Welcome to part deux of my little intro to functions. If you're unclear on why functions are objects or what the difference between a function statement and expression is, pop on over to [part one](https://unicornsfartpixels.github.io/blog/2017/02/01/2017Functions-pt1) and have a quick read through. Otherwise, let's dive into `this` and one of my favourite features of ES6: arrow functions!
