update audio series

--- a/site/content/posts/2017-10-25audio-fft.md
+++ b/site/content/posts/2017-10-25audio-fft.md
@@ -1,7 +1,7 @@
 +++
 date = "2017-10-25T00:00:00Z"
-tags = ["p5js", "data", "dataviz"]
-title = "Visualizing Sound: The FFT"
+tags = ["p5js", "data", "dataviz", "audio"]
+title = "Visualizing Sound (pt1): The FFT"
 type = "posts"
 draft = false
 +++
@@ -9,6 +9,8 @@ draft = false
 The Fast Fourier Transform is what got me started with data visualisation.
 
 There are many other entry points when it comes to dataviz, but I've always been really influenced by, and interested in music and the way rythms can play with our senses. It felt only natural to explore how I might play with that. 
+
+#### N.B This is part one of a series on audio visualisation. If you already have your bearings with the FFT and want to dive deeper into how the Web Audio Api works as a stand alone, and specifically how to integrate it into a three.js project, jump ahead to <a href="https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/" target="_clear">Part One</a>
 
 Fun fact: the FFT is also apparently the "_most important (numerical) algorithm of our lifetime_" (if we're to believe MIT's <a href="http://www-math.mit.edu/~gs/papers/amsci.pdf" target="_clear">Gilbert Strang</a>, which we do,) so I figured I might as well take a stab at figuring out what it's all about. 
 
@@ -126,4 +128,4 @@ For an example of multiple elements in action, check out one of my first audio-p
 
 {{< p5_sketch fftpatterns >}}
 
-Next up, audio viz basics in three.js. Stay tuned...
+Next up, <a href="https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/" target="_clear">part two</a> of audio viz basics in three.js.
