--- a/site/content/posts/2018-01-01fftthree.md
+++ b/site/content/posts/2018-01-01fftthree.md
@@ -6,18 +6,18 @@ type = "posts"
 draft = false
 +++
 
-Visualizing audio using three.js isn’t all that different than doing it with p5js. You use the FFT to analyse and isolate frequencies, which you then use to influence and act on certain aspects of your visuals. Things like shape and size, colour, rotation angle…
+Visualizing audio using three.js isn’t all that different than doing it with the p5 library. You use the FFT to analyze and isolate frequencies, which you then use to influence and act on certain aspects of your visuals. Things like shape and size, colour, rotation angle…
 
-#### N.B This is part two of a series on audio visualisation. If you want a gentle primer on what the FFT is and how it works with p5.js, jump back to <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft/" target="_clear">Part One</a>
+#### N.B This is part two of a series on audio visualization. If you want a gentle primer on what the FFT is and how it works with p5.js, jump back to <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft/" target="_clear">Part One</a>
 
-So from a theoretical standpoint, we’re not really in new territory here. However, from a practically POV, it’s a bit of a different story. To visualise audio with the three.js library you can use the library’s built in <a href=“https://threejs.org/docs/index.html#api/audio/AudioAnalyser” target="_clear">AudioAnalyser object</a>, but that will only get you so far. It’s not quite as flexible as p5’s <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft" target="_clear">`getEnergy()`</a> in that it only provides you with the average frequency of the sound you’re feeding it. It doesn’t really let you specify any kind of range on the audio being analysed. This works great for something like an equaliser, but if you want to get more specific you’ll need something that gives you more access under the hood.
+...So from a theoretical standpoint, we’re not really in new territory here. However, practically speaking, the story is a bit different. To visualize audio with three.js you can use the library’s built in <a href=“https://threejs.org/docs/index.html#api/audio/AudioAnalyser” target="_clear">AudioAnalyser object</a>, but that will only get you so far. It’s not quite as flexible as p5’s <a href="https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft" target="_clear">`getEnergy()`</a> in that it only provides you with the average frequency of the sound you’re feeding it. It doesn’t really let you specify any kind of range. This works great for something like an equalizer, but if you want to get more specific you’ll need something that gives you more access under the hood.
 
 ### The Web Audio API
 
-First things first: before we can analyse any audio, we have to get at the audio itself. Contrary to p5, it’s not as simple as loading the file and sending it into the instantiated FFT object. We instead have to create an audio context, it’s source and it’s analyser, grab our audio file, and connect everything together:
+First things first - before we can analyze any audio, we have to get at the audio itself. Contrary to p5, it’s not as simple as loading the file and sending it into the instantiated FFT object. We instead have to create an audio context, it’s source and it’s analyser, grab our audio file, and connect everything together:
 
 ```javascript
-// grab audio to be analysed
+// grab audio to be analyzed
 const audioToAnalyse = new Audio();
 audio.src = 'demo/youraudiotrack.mp3';
 
@@ -121,11 +121,11 @@ export { analyser, freq, bands };
 
 ### Plugging into Three.js
 
-Now that we’ve got our audio sorted out, it’s time to look at how to integrate this into your three.js project, which if like me you happen to be new to the library, can feel like no small feat. Three.js is a lot of fun, but comes with it’s own set of headaches if you’re looking to get things rolling with es6 modules and such. Webpack being what it is, rapid prototyping can often feel more like a long, slow drudge, unless you’re ready to use someone else boilerplate. In my search for answers I did come upon a few good options. I ended up using Guillaume Gouessan aka <a href="https://github.com/superguigui" target="_blank">SuperGuiGui</a>’s <a href="https://github.com/superguigui/threejs-starter-kit" target="\_blank">threejs starter project</a> during my <a href=“http://temp-studio.com/“ target="_blank">TempStudio residency</a> back in November, which definitely helped me skip a few of the hurdles I kept running into using my usual base webpack setup. And go figure, it doesn't even use Weback!
+Now that we’ve got our audio sorted out, it’s time to look at how to integrate this into your three.js project, which if like me you happen to be new to the library, can feel like no small feat. Three.js is a lot of fun, but comes with it’s own set of headaches if you’re looking to get things rolling with es6 modules and such. Prototyping can often feel more like a long, slow drudge through Webpacks more confusing corridors, unless you’re ready to use someone elses boilerplate. In my search for answers I did come upon a few good options. I ended up using Guillaume Gouessan aka <a href="https://github.com/superguigui" target="_blank">SuperGuiGui</a>’s <a href="https://github.com/superguigui/threejs-starter-kit" target="\_blank">threejs starter project</a> during my <a href="http://temp-studio.com/" target="_blank">TempStudio residency</a> back in November, which definitely helped me skip a few of the hurdles I kept running into using my usual base webpack setup. Ironically, turns out the boilerplate doesn't even use Weback!
 
 ### Budo <3
 
-I say that I found good options - not great one’s, because IMO it’s always better to set things up yourself. I figured this post was as good an excuse as any to build my own little base boilerplate project and I highly encourage you to do the same. Feel free to look at <a href="https://github.com/elizasj/fftthree"  target="_blank">my project</a> for inspiration if you need it.
+So I said that I found good options, not great one’s... because IMO it’s always better to set things up yourself. I figured this post was as good an excuse as any to build my own little base boilerplate project and I highly encourage you to do the same. Feel free to look at <a href="https://github.com/elizasj/fftthree"  target="_blank">my project</a> for inspiration if you need it.
 
 After wrestling with some unexpected behaviour from <a href=“https://github.com/parcel-bundler/parcel” target="_blank">Parcel</a> I decided to dig through the boilerplate I'd used previously and see how things were set up there. Which is how I came across <a href=“https://www.npmjs.com/package/budo” target="_blank">Budo</a>, (one more handy tool we can thank Matt Deslaurier for!) which is a great little zero config browserify development server that has LiveReloading integration right out of the box, minus all the "magic" that makes debugging Parcel difficult. Think of my setup as a stripped down version of the SuperGuiGui boilerplate. I have only what I need, and nothing else. The parts that didn’t serve my project or that I simply didn’t understand, I got rid of (I really hate using tools that I don’t understand.)
 
@@ -139,7 +139,7 @@ _Some of the parts that I found most tricky about visualising sound with three.j
 
 ### Modifying imported objects
 
-For this demo I grabbed a ready-made object from Google’s new(-ish) 3D library project, <a href=“https://poly.google.com/” target="_blank">Poly</a>. It was a white rock sort of thing and I wanted to change its color and texture a bit. In order to achieve this, you need to access the geometry as an array of parent/child and run a check to find an instance of THREE.mesh within the imported object data. If it exists, push it into the objs array, and pass that array element on for further usage:
+For this demo I grabbed a ready-made object from Google’s new(-ish) 3D library project, <a href=“https://poly.google.com/” target="_blank">Poly</a> - some sort of white rock - whose color and texture I wantd to tweek. In order to achieve this, you need to access the geometry as an array of parent/child and run a check to find an instance of THREE.mesh within the imported object data. If it exists push it into an array, and pass the element on for further usage:
 
 ```javascript
 //model
@@ -246,7 +246,7 @@ particles.children[k].scale.set(50 _ subAvg, 50 _ subAvg, 50 \* subAvg);
 renderer.render(scene, camera);
 }
 ```
-
-Check out this base demo in action <a href="https://elizasj.github.io/fftthree/" target="_blank">here</a>, and clon/fork the full code <a href="https://github.com/elizasj/fftthree" target="_blank">here</a>.
+And that's pretty much all you need to get things going. 
+Check out the full demo in action <a href="https://elizasj.github.io/fftthree/" target="_blank">here</a>, or clone/fork the repo to play around with <a href="https://github.com/elizasj/fftthree" target="_blank">here</a>.
 
 For a more elaborate example of all of this in action, feel free to check out what I was working on at the residency I mentioned above, <a href="https://elizasj.github.io/bloopV2/">here</a>. 
