add section tag

--- a/site/content/posts/2018-01-01fftthree.md
+++ b/site/content/posts/2018-01-01fftthree.md
@@ -44,9 +44,9 @@ Next, we create an analyser node inside our audio context. As the name might sug
 
 It also gives us access to our audio’s frequency bin count, aka the amount of data values we’ll have access to for our visualisation…
 
-<div class="reminder">
+<section class="reminder">
 <strong>Reminder:</strong> Bins have everything to do with the sample buffer, which is a little snapshot of sound used by the FFT’s algorithm in it’s analysis. Bin count is always half the fft size. Feel free to hop back to my post on the <a href=“https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft/“ target="_blank">FFT & p5js </a> if you want more details on that.
-</div>
+</section>
 
 … which we store in an array in order to animate our visualisations. Which brings us to Matt Deslaurier aka <a href="https://github.com/mattdesl" target="_blank">mattdesl's</a> very handy <a href="https://www.npmjs.com/package/analyser-frequency-average" target="_blank">analyser-frequency-average</a> module, which basically let’s us set a frequency range within the data we’re collecting off of the audio.
 
@@ -67,14 +67,14 @@ function update() {
 
 So this handy little module allows you to set the min and max Hz range you want to play with, which you set inside javascript’s `requestAnimationFrame()` method.
 
-<div class="reminder">
+<section class="reminder">
 <strong>Reminder:</strong> The normal range for the average human ear is between 20 and 20,000Hz. However, the range we encounter most often in our day to day lives is in the 250 to 6,000Hz range.
 Since 60-ish percent of the audio spectrum is undetectable to the human ear, we won’t bother ourselves with it. So if you’re taking the full 20-20,000Hz range:
 
 * low levels are the lowest 5% of our range
 * mid mevels are between 5% and 15.5%
 * high levels are between 15.5% and 25.5%
-</div>
+</section>
 
 I tend to prefer saving my ranges in an object, in order to be able to easily call on them later from my main project file. This is especially useful if you analyze multiple audio files within the same project. I can then export only the analyser, frequency data array and frequency range object for each audio source I'm using, which I can call on later from inside three.js’ `render()` function:
 
