--- a/site/content/posts/2018-01-01fftthree.md
+++ b/site/content/posts/2018-01-01fftthree.md
@@ -48,7 +48,7 @@ It also gives us access to our audio’s frequency bin count, aka the amount of 
 <strong>Reminder:</strong> Bins have everything to do with the sample buffer, which is a little snapshot of sound used by the FFT’s algorithm in it’s analysis. Bin count is always half the fft size. Feel free to hop back to my post on the <a href=“https://www.unicornsfartpixels.com/posts/2017-10-25audio-fft/“ target="_blank">FFT & p5js </a> if you want more details on that.
 </section>
 
-… which we store in an array in order to animate our visualisations. Which brings us to Matt Deslaurier aka <a href="https://github.com/mattdesl" target="_blank">mattdesl's</a> very handy <a href="https://www.npmjs.com/package/analyser-frequency-average" target="_blank">analyser-frequency-average</a> module, which basically let’s us set a frequency range within the data we’re collecting off of the audio.
+… which we store in an array in order to animate our visualisations. Which brings us to Matt DesLauriers aka <a href="https://github.com/mattdesl" target="_blank">mattdesl's</a> very handy <a href="https://www.npmjs.com/package/analyser-frequency-average" target="_blank">analyser-frequency-average</a> module, which basically let’s us set a frequency range within the data we’re collecting off of the audio.
 
 (Works pretty much the same as p5’s `.getEnergy()` module... still not clear on why the Web Audio API doesn’t come with that built in, but it has certainly sparked quite a <a href=“https://webcache.googleusercontent.com/search?q=cache:xedjZa2m770J:https://hn.svelte.technology/item/15240762+&cd=3&hl=en&ct=clnk&gl=ca&client=firefox-b-ab” target="\_blank">discussion </a>. TL;DR, it turns out the Web Audio API is a bit of a confused piece of technology — not that that has ever stopped a curious developer!)
 
@@ -74,7 +74,7 @@ Since 60-ish percent of the audio spectrum is undetectable to the human ear, we 
 * low levels are the lowest 5% of our range
 * mid mevels are between 5% and 15.5%
 * high levels are between 15.5% and 25.5%
-</section>
+  </section>
 
 I tend to prefer saving my ranges in an object, in order to be able to easily call on them later from my main project file. This is especially useful if you analyze multiple audio files within the same project. I can then export only the analyser, frequency data array and frequency range object for each audio source I'm using, which I can call on later from inside three.js’ `render()` function:
 
@@ -131,13 +131,11 @@ Now that we’ve got our audio sorted out, it’s time to look at how to integra
 
 So I said that I found good options, not great one’s... because IMO it’s always better to set things up yourself. I figured this post was as good an excuse as any to build my own little base boilerplate project and I highly encourage you to do the same. Feel free to look at <a href="https://github.com/elizasj/fftthree"  target="_blank">my project</a> for inspiration if you need it.
 
-After wrestling with some unexpected behaviour from <a href=“https://github.com/parcel-bundler/parcel” target="_blank">Parcel</a> I decided to dig through the boilerplate I'd used previously and see how things were set up there. Which is how I came across <a href=“https://www.npmjs.com/package/budo” target="_blank">Budo</a>, (one more handy tool we can thank Matt Deslaurier for!) which is a great little zero config browserify development server that has LiveReloading integration right out of the box, minus all the "magic" that makes debugging Parcel difficult. Think of my setup as a stripped down version of the SuperGuiGui boilerplate. I have only what I need, and nothing else. The parts that didn’t serve my project or that I simply didn’t understand, I got rid of (I really hate using tools that I don’t understand.)
+After wrestling with some unexpected behaviour from <a href=“https://github.com/parcel-bundler/parcel” target="_blank">Parcel</a> I decided to dig through the boilerplate I'd used previously and see how things were set up there. Which is how I came across <a href=“https://www.npmjs.com/package/budo” target="_blank">Budo</a>, (one more handy tool we can thank Matt DesLauriers for!) which is a great little zero config browserify development server that has LiveReloading integration right out of the box, minus all the "magic" that makes debugging Parcel difficult. Think of my setup as a stripped down version of the SuperGuiGui boilerplate. I have only what I need, and nothing else. The parts that didn’t serve my project or that I simply didn’t understand, I got rid of (I really hate using tools that I don’t understand.)
 
 ### The base scene
 
 This post assumes you understand the basics of setting up a Three.js scene. If not, pop over to <a href="https://threejs.org/docs/index.html#manual/introduction/Creating-a-scene" target="_blank">the docs</a> for a quick run down, or skim <a href="https://github.com/elizasj/fftthree/blob/master/src/index.js">my boilerplate</a>. Once you have your renderer, scene, camera and lights set up, the real fun begins - let’s get some things on the screen!
-
-
 
 _Some of the parts that I found most tricky about visualising sound with three.js are outlined here - hopefully this will save others some time:_
 
@@ -214,7 +212,7 @@ function addObj(mesh) {
 
 ### Putting it all together
 
-Now that we have something to animate on the screen, we can plug in our audio data and get things moving. I can use the analyser, frequency data array and frequency range object that I’d exported above in my render loop along with my particles object. 
+Now that we have something to animate on the screen, we can plug in our audio data and get things moving. I can use the analyser, frequency data array and frequency range object that I’d exported above in my render loop along with my particles object.
 
 Remember that particles acts as a container so you can animate both the grid as a whole structure as well as the individual elements that comprise it:
 
@@ -250,7 +248,8 @@ particles.children[k].scale.set(50 _ subAvg, 50 _ subAvg, 50 \* subAvg);
 renderer.render(scene, camera);
 }
 ```
-And that's pretty much all you need to get things going. 
+
+And that's pretty much all you need to get things going.
 Check out the full demo in action <a href="https://elizasj.github.io/fftthree/" target="_blank">here</a>, or clone/fork the repo to play around with <a href="https://github.com/elizasj/fftthree" target="_blank">here</a>.
 
-For a more elaborate example of all of this in action, feel free to check out what I was working on at the residency I mentioned above, <a href="https://elizasj.github.io/bloopV2/">here</a>. 
+For a more elaborate example of all of this in action, feel free to check out what I was working on at the residency I mentioned above, <a href="https://elizasj.github.io/bloopV2/">here</a>.
