--- a/site/content/posts/2018-01-212017Codevember.md
+++ b/site/content/posts/2018-01-212017Codevember.md
@@ -1,7 +1,7 @@
 +++
 date = "2018-01-21T00:00:00Z"
 tags = ["animation"]
-title = "Mo.js ➰"
+title = "Japanese Fireworks w/Mo.js ➰"
 draft = false
 type = "posts"
 +++
@@ -10,7 +10,7 @@ In November I took part in the <a href="http://codevember.xyz/" target="_blank">
 
 While last year I went in with absolutely no plan - I think I made it through about four days before falling so far behind it felt like a lost cause to even try and catch up, - this year I decided to turn the challenge into an opportunity to learn a new technology. I restricted myself to only using the <a href="http://mojs.io/" target="_blank">mo.js library</a>, and iterating on one "burst" (small animation in mo-speak) a day.
 
-I was a bit worried that the sketches would end up being redundant but it was quite the opposite. My initial simple burst yielded a collection of colorful aniamtions (check out the full collection <a href="https://codepen.io/collection/XegEbZ/#">here*</a>.) that spawned a few requests about how I'd made them. 
+I was a bit worried that the sketches would end up being redundant but it was quite the opposite. My initial simple burst yielded a collection of colorful aniamtions (check out the full collection <a href="https://codepen.io/collection/XegEbZ/#">here*</a>.) that spawned a few requests about how I'd made them and even some comparisons to <a href="https://i.pinimg.com/736x/e6/82/76/e6827668847a3e51054783fc52b63a68--flat-illustration-illustration-fireworks.jpg" target="_blank">japanese fireworks</a> 
 
 Here I’ll walk you through how I created my 6th entry for this year’s codevember, a sort of <em>dandelion-spreading-its-pollen-in-the-wind</em> sort of thing:
 
