add quicktips tags

--- a/site/content/quicktips/2018-01-05forloops.md
+++ b/site/content/quicktips/2018-01-05forloops.md
@@ -1,7 +1,7 @@
 +++
 date = "2018-03-01T00:00:00Z"
 title = "The For Loop(s)"
-tags = ["quicktips"]
+tags = ["quicktips, basics"]
 type = "quicktips"
 draft = false
 +++
