--- a/site/content/quicktips/2018-01-05mapvsmap.md
+++ b/site/content/quicktips/2018-01-05mapvsmap.md
@@ -1,6 +1,6 @@
 +++
 date = "2018-03-01T00:00:00Z"
-tags = ["quicktips"]
+tags = ["quicktips, basics"]
 title = ".map() vs p5.js map()"
 draft = false
 type = "quicktips"
@@ -19,17 +19,17 @@ const books = [
   {
     title: 'Shantaram',
     genre: 'nonfiction',
-    pages: 933,
+    pages: 933
   },
   {
     title: 'Mindstorms',
     genre: 'nonfiction',
-    pages: 252,
+    pages: 252
   },
   {
     title: 'A Beautiful Question',
     genre: 'nonfiction',
-    pages: 448,
+    pages: 448
   },
   {
     title: 'The Goldfinch',
@@ -56,8 +56,10 @@ var value = 10;
 var m = map(value, 0, 100, 0, width);
 ellipse(m, 50, 10, 10);
 ```
+
 <p data-height="565" data-theme-id="dark" data-slug-hash="JMxwzr" data-default-tab="js,result" data-user="elizasj" data-embed-version="2" data-pen-title="p5 map() ex" class="codepen">See the Pen <a href="https://codepen.io/elizasj/pen/JMxwzr/">p5 map() ex</a> by Eliza SJ (<a href="https://codepen.io/elizasj">@elizasj</a>) on <a href="https://codepen.io">CodePen</a>.</p>
 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 
 ## To recap...
+
 <strong>Vanilla js'.map()</strong> is one of the first things you're taught when you dive into functional js because it can be used as a really handy replacement for a for loop. Whereas <strong>p5's .map()</strong> works more like the kind you'd use to explore a new city - it converts the scale of a range to fit into another.
