--- a/site/content/quicktips/2018-03-15cors.md
+++ b/site/content/quicktips/2018-03-15cors.md
@@ -6,9 +6,9 @@ draft = false
 type = "quicktips"
 +++
 
-**CORS** stands for **C**ross **O**rigin **R**equest **S**haring - it's a <a href="https://www.w3.org/TR/cors/">w3c standard</a> that gives access to resources across web domains. So basically if you've ever made an API call, you've likely encountered __CORS__. 
+**CORS** stands for **C**ross **O**rigin **R**equest **S**haring - it's a <a href="https://www.w3.org/TR/cors/" target="_blank">w3c standard</a> that gives access to resources across web domains. So basically if you've ever made an API call, you've likely encountered __CORS__. 
 
-__CORS__ exists because of the <a href="https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy">same-origin-policy</a> - a rule that states that HTTP requests made from one domain can only access endpoints on that same domain. 
+__CORS__ exists because of the <a href="https://developer.mozilla.org/en-US/docs/Web/Security/Same-origin_policy" target="_blank">same-origin-policy</a> - a rule that states that HTTP requests made from one domain can only access endpoints on that same domain. 
 
 When using `fetch()` or axios, or whatever your prefered API requesting habits may have you reaching for, (though `fetch()` is suppose to be the standard accross all browsers ~~soon~~ one day...) to access a URL that has a different origin than where you're requesting from, **CORS** needs to be explicitly enabled on the “different origin” side of things, aka the place you're making a request _to_ (an API).
 
@@ -28,7 +28,7 @@ There are actually a surprising amount of web sites with such _not-so-public_ AP
 
 Not ideal.
 
-Of course, if the API is your own you can go ahead and set the proper __CORS__ response on the server that you’re making the call to. Express has a really easy to implement <a href="https://www.npmjs.com/package/cors">**CORS** package</a>, for example.
+Of course, if the API is your own you can go ahead and set the proper __CORS__ response on the server that you’re making the call to. Express has a really easy to implement <a href="https://www.npmjs.com/package/cors" target="_blank">**CORS** package</a>, for example.
 
 ## Solution
 
@@ -38,7 +38,7 @@ Assuming that the API in question allows access from 3rd-party apps, that you're
 
 The proxy doesn't have to be on the same domain as your site/app/whatever, as long as the proxy itself properly supports **CORS** when communicating with the client. 
 
-You can either write your own, or use a ready made proxy like the very handy <a href="https://www.npmjs.com/package/cors-anywhere">cors-anywhere</a>, implimented like so:
+You can either write your own, or use a ready made proxy like the very handy <a href="https://www.npmjs.com/package/cors-anywhere" target="_blank">cors-anywhere</a>, implimented like so:
 
 ```javascript
 var proxyUrl = 'https://cors-anywhere.herokuapp.com/',
