modify docker post

--- a/site/content/quicktips/2018-03-15Docker.md
+++ b/site/content/quicktips/2018-03-15Docker.md
@@ -16,9 +16,9 @@ Containers are not a new idea in the programing world, but when I first encounte
 - - ports 
 
 ## Some Context
-My first steps using Docker left felt like I was writing something similar to the <a href=“https://en.wikipedia.org/wiki/Pseudocode” target="_blank">pseudo code</a> I sometimes rely on to hash out ideas of programs I have in my head. Which is kinda cool because it feels familiar, inviting, unintimidating even. But it’s also kinda abstract and I quickly realised that I needed a refresher in all things networking to really be able to use Docker to it’s full potential. This is especially true if you’re using Docker on a Mac.
+My first steps using <a href="https://www.docker.com" target="_blank">Docker</a> had me feeling like I was writing something similar to the <a href=“https://en.wikipedia.org/wiki/Pseudocode” target="_blank">pseudo code</a> I sometimes use to hash out ideas. Wich is kind of cool because that means it felt familiar, inviting, unintimidating even. But pseudo code can also kind of feel abstract if you're not sure what's happening under the hood. I quickly realised that I needed a refresher in all things networking to really be able to use Docker to it’s full potential. This is especially true if you’re using Docker on a Mac.
 
-Docker plays most friendly with Linux systems because it was conceived for linux systems first and foremost, and requires a virtual machine (vm) to run on a Mac (which feels kinda ironic since everyone always says Docker is so amazing because it's so much lighter and faster than a vm...) So when you install <a href="https://docs.docker.com/docker-for-mac/" target="_blank">docker-for-mac</a> on your system keep in mind that any `ports` you expose in your `Dockerfile` will have to be pointed to ports outside the vm in order to render anything into the browser. Hold on to that thought, because we’ll come back to it in a minute.
+Docker plays most friendly with Linux systems because it was conceived for linux systems first and foremost, and requires a virtual machine (vm) to run on a Mac (which feels pretty ironic conisdering once of the main arguments for Docker being so great is that it's so much lighter and faster than a vm... but anyways...) So when you install <a href="https://docs.docker.com/docker-for-mac/" target="_blank">docker-for-mac</a> on your system keep in mind that any `ports` you expose in your `Dockerfile` will have to be pointed to ports outside the vm in order to render anything into the browser. Hold on to that thought, because we’ll come back to it in a minute.
 
 ### Images
 
@@ -91,7 +91,7 @@ But if each service goes into a seperate container... how do you make containers
 
 ## Docker-compose
 
-Docker really clicked for me when I started using <a href="https://docs.docker.com/compose/overview/" target="_blank">docker-compose</a>, which is basically like a Dockerfile that sits on top of a bunch of Dockerfiles (or rather, the images they describe,) telling them how to play nice with each other.
+Docker really clicked for me when I started using <a href="https://docs.docker.com/compose/overview/" target="_blank">docker-compose</a>, which is basically like a Dockerfile that sits on top of a bunch of Dockerfiles (or rather, the images they describe...) telling them how to play nice with each other.
 
 In our case the local Gatsby project already has it's image. Instead of writing two more images, I'm going to pull some pre-made ones from <a href="https://hub.docker.com/" target="_blank">docker hub</a> for the cms and database I want to hook up to my project. (__Hint:__ official project images > random user uploaded images, as they are most trustworthy.) 
 
