--- a/site/content/posts/2018-03-15Shaders-pt1.md
+++ b/site/content/posts/2018-03-15Shaders-pt1.md
@@ -6,29 +6,31 @@ draft = false
 type = "posts"
 +++
 
-If you’re interested in textures or are curious about how you might digitally render out something that looks more organic than it does, well, digital, Shaders might be for you. That’s what got me interested anyways, in taking on the notoriously complex language. If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/">Sean Zelmmer's work</a>. The sometimes  noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. You can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
+If you’re interested in textures or are curious about how you might digitally render out something that looks more organic than it does, well, digital, Shaders might be for you. That’s what got me interested anyways, in taking on the notoriously complex language. 
+
+If you're not sure what shaders are, check out <a href="https://www.instagram.com/lejeunerenard/" target="_blank">Sean Zelmmer</a>'s work. The sometimes  noisy, sometimes shiny, sometimes goopy/liquidy looking skin you see covering the shapes and textures in his posts are created using shaders. You can apply shaders to 3D forms or let them occupy the entirety of your screen as a standalone visual universe... or combine both \o/
 
 #### N.B This is part one of a series on getting started with Shaders in Three.js and will specifically cover how to create an environment that renders out a base texture onto which you can apply a shader (coming soon) aka rendering to a texture.
 
 ## A little background
 
-Less like JS, more like C, Shaders are written in openGL Shading Language (GLSL) and depend on parallel processing, which basically just means lots of teeny tiny microprocessors all running at the same time (via the GPU). As contrasted by serial processing, which does things pedantically, one after the other, allocating more processing time to bigger (heavier) tasks than others (via the CPU). Until now, any visuals you’ve been making have likely been relying on the CPU. Not Shaders! Which is why they are so powerful. The best analogy I’ve ever seen for this can be found <a href=“https://www.youtube.com/watch?v=WmW6SD-EHVY”>here</a>. Hint: Mona Lisa + jumbo paint gun — well worth the click, I promise.
+Less like JS, more like C, Shaders are written in <a href="https://www.khronos.org/opengl/wiki/OpenGL_Shading_Language" target="_blank">openGL Shading Language</a> (GLSL) and depend on parallel processing to run. Which basically just means lots of teeny tiny microprocessors all running at the same time (via the GPU) - as contrasted by serial processing, which does things pedantically, one after the other, allocating more processing time to bigger (heavier) tasks than others (via the CPU). Until now, any visuals you’ve been making have likely been relying on the CPU. Not Shaders! Which is why they are so powerful. The best analogy I’ve ever seen for this can be found <a href="https://www.youtube.com/watch?v=WmW6SD-EHVY" target="_blank">here</a>. Hint: Mona Lisa + jumbo paint gun — well worth the click, I promise.
 
 ## Base Setup & Tooling
 
-My go-to for getting up and running quickly with Three.js has been <a href="https://www.unicornsfartpixels.com/%E2%80%9Chttps://www.npmjs.com/package/budo%E2%80%9D" target="_blank">Budo</a>, a great little zero config browserify development server from Matt DesLauriers that has live reloading integration right out of the box. As I mentioned in my post on <a href=“https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/“ target="_blank">audio visualisation w/Three.js</a> I use a stripped down version of <a href="https://github.com/superguigui">SuperGuiGui’s</a> <a href="https://github.com/superguigui/threejs-starter-kit">boilerplate</a> as my starter environment, and build from there. Feel free to use it if you haven’t got your own preferred setup already - available <a href=“https://github.com/elizasj/fftthree/blob/master/src/index.js” target="_blank">here</a>. If you’d rather use your own setup, just know that in this tutorial I build off of the 3D grid of objects in my boilerplate, so moving forward you’ll find yourself needing to refer back to it often. My base also happens to come with everything you need to get rolling with audio visualisation. Get rid of that part of the code if you want, or hold on to it. Might come in handy in parts three/four of this Shaders series (_hint, hint_.)
+My go-to for getting up and running quickly with Three.js has been <a href="https://www.unicornsfartpixels.com/%E2%80%9Chttps://www.npmjs.com/package/budo%E2%80%9D" target="_blank">Budo</a>, a great little zero config browserify development server from <a href="https://twitter.com/mattdesl" target="_blank">Matt DesLauriers</a> that has live reloading integration right out of the box. As I mentioned in a previous <a href=“https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/“ target="_blank">post</a> I created my own little <a href=“https://github.com/elizasj/fftthree/blob/master/src/index.js” target="_blank">boilerplate</a>, largely inspired by <a href="https://github.com/superguigui">SuperGuiGui’s</a>. This tutorial will build off of my boilerplate, so feel free to use it. It also happens to come with everything you need to get rolling with audio visualisation in Threejs, which might come in handy in parts three/four of this Shaders series (_hint, hint_.)
 
 ## Rendering to a texture
 
-In three.js you have materials (which are basically 3D shapes), to which you can apply textures (which are basically like skins), “inside” which you can store a shader (which is basically …like skin pigment? I guess?), which you can then display on the screen.
+In Threejs you have materials (which are basically 3D shapes), to which you can apply textures (which are basically like skins), “inside” which you can store a shader (which is basically …like skin pigment? I guess?), which you can then display on the screen.
 
 There are of course some other important concepts to understand about shaders, and we’ll get to them in future posts. For now, you’ve got all the info needed to navigate this initial base-setup step.
 
-#### Some things to keep in mind when setting up a basic three.js scene for shaders:
+#### Some things to keep in mind when prepping a basic scene for shaders in Threejs:
 
 ### Use an Orthographic Camera.
 
-Right off the bat, we'll be swapping out the commonly reached __Perspective Camera__ for an __Orthographic__ one. The __Perspective Camera__, which tries to imitate the way human eyes see creates a bit of “distortion” that, generally speaking, actually makes things seem more realistic, which you might think we'd want since we're aiming for a _not so digital_ feel. But it can prove problematic with shaders re: scaling since the distance between the rendered image and the three.js camera isn’t necessarily constant. The idea with the perspective camera is that much like IRL, the further away the observer is from the what's rendered on the screen, the smaller it is. 
+Right off the bat, we'll be swapping out the default __Perspective Camera__ for an __Orthographic__ one. The __Perspective Camera__, which tries to imitate the way human eyes see creates a bit of “distortion” that, generally speaking, actually makes things seem more realistic, which you might think we'd want since we're aiming for a _not so digital_ feel. But it can actually prove problematic with shaders re: scaling since the distance between the rendered image and the Threejs camera isn’t necessarily constant. The idea with the perspective camera is that much like IRL, the further away the observer is from the what's rendered on the screen, the smaller it is. 
 
 ```javascript
 /* Init renderer and canvas */
@@ -49,11 +51,11 @@ const camera = new OrthographicCamera(-w / 2, w / 2, h / 2, -h / 2, 0.1, 1000);
 camera.position.set(0, 0, 150);
 ```
 
-The __Orthographic Camera__ fixes these issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>. For those well versed in GLSL, the perspective camera probably becomes more of a tool than a problem, but for starting out, orthographic seems to be the way to go.
+The __Orthographic Camera__ fixes these issues, by getting rid of the foreshortening effect and keeping the object's dimensions constant regardless of how near or far the camera is. If you’re having trouble visualising what this might look like, think of old school <a href="https://www.packtpub.com/sites/default/files/Article-Images/6283OS_02_15.png" target="_blank">Sims/Sim City</a>. 
 
 ## Set a render target
 
-This step is pretty important as you’re creating the container that will store your future shader data. You’re basically rendering an invisible texture - aka a render target - which gets passed to the render function so that our future shader can render into it. We’re giving the object a texture property so that it can receive our future shader.
+This step is pretty important as you’re creating the container that will store your future shader data. You’re basically rendering an invisible texture - aka a render target - which gets passed to the render function so that our shader can eventually render into it. We’re giving the object a texture property so that it can receive our future shader.
 
 ```Javascript
 const renderTarget = new WebGLRenderTarget(w, h, { format: THREE.RGBAFormat });
@@ -61,7 +63,7 @@ const renderTarget = new WebGLRenderTarget(w, h, { format: THREE.RGBAFormat });
 
 ## Create a group
 
-It’s important to create a group in the global namespace because later on in our code we’ll need to access the variable from within the render function. I included it just underneath the rest of the scene setup portion of the code:
+It’s important to create a group in the global namespace because later on in our code we’ll need to access the variable from within the render function. Here, I've included it just underneath the rest of the usual scene setup code:
 
 ```Javascript
 /* Lights */
@@ -76,11 +78,11 @@ const group = new Group();
 scene.add(group);
 ```
 
-If you’re using my boilerplate you’ll notice that __group__ replaces __particles__ which means we swap out the `Object3D()` base object class for it’s cousin `Group()`. To be honest, I don’t know that there’s a huge difference between either of these classes other than the added clarity of the word Group. From what I can tell, the `Group()` class is also handy for manually grouping things together, and you can have multiple `Object3D` groups within an instance of the `Group()` class, which we don't particularily need right now, but may eventually. If anyone has any other info/opinion on why using `Group()` is better, <a href="https://twitter.com/iamelizasj" target="_blank">ping me</a> on twitter, I'd be curious to know.
+If you’re using my boilerplate you’ll notice that __group__ replaces __particles__ which means we swap out the `Object3D()` base object class for it’s cousin `Group()`. To be honest, I don’t know that there’s a huge difference between either of these classes other than the added clarity of the word Group. From what I can tell, the `Group()` class is also handy for manually grouping things together, and you can have multiple `Object3D` groups within an instance of the `Group()` class, which we don't particularily need right now, but may eventually. If anyone has any other info/opinion on why using `Group()` is/isn't better, <a href="https://twitter.com/iamelizasj" target="_blank">ping me</a> on twitter, I'd be curious to know.
 
 ## Add mesh to group in the object grid
 
-This part is pretty straight forward, especially if you followed along in my previous <a href="<a href=“https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/“ target="_blank"">Audio w/Three.js post</a> - you’re basically importing a 3D object, creating a grid and rendering that object in each of the grid spaces. 
+This part is pretty straight forward, especially if you followed along in my past <a href="<a href=“https://www.unicornsfartpixels.com/posts/2018-01-01fftthree/“ target="_blank"">Audio w/Three.js post</a> - you’re basically importing a 3D object, creating a grid and rendering that object in each of the grid spaces. 
 
 ```javascript
 /* Content of scene */
@@ -137,7 +139,7 @@ One new thing to note: we need to add the `mesh` (aka our repeatedly rendered ob
 
 ## A scene within a scene
 
-We're almost finished getting our scene set up to play nice with Shaders! To connect all the dots and get our render target working, we have to place our initial scene (the grid of imported 3D objects) inside some sort of container, which we will render out into a three.js scene. 
+We're almost finished getting our scene set up to play nice with Shaders! To connect all the dots and get our render target working, we have to place our initial scene (the grid of imported 3D objects) inside some sort of container, which we will render out into a(nother) Threejs scene.
 
 So a scene within a scene... (kind of like <a href="https://www.youtube.com/watch?v=TAbbJT0ZXmk" target="_blank">inception</a> 🤔)
 
@@ -181,4 +183,6 @@ cube.rotation.x += 0.01;
 cube.rotation.y += 0.05;
 ```
 
-And now you have a working render target \o/! Your Three.js project is officially primed and ready for some shaders, which we'll get to in the next post. I'll go over how to create a custom shader using two different methods code implementation methods. Stay tuned!
+And now you have a working render target \o/! Your Three.js project is officially primed and ready for some shaders, which we'll get to in the next post. I'll go over how to create a custom shader using two different code implementation methods. 
+
+Stay tuned!
